--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
+    "react-gallery-carousel": "^0.4.0",
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-gallery-carousel": "^0.2.2",
     "tailwindcss": "^3.2.7"
   }
 }
