--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-gallery-carousel": "^0.4.0",
+    "react-hook-form": "^7.43.2",
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
